# citylink_data

./: .gitignore  README.md  add_red_line.py  preprocessing.py  pyproject.toml  real_time_bus_data_imputation.py  requirements.txt  transit.ipynb  tree.txt  trips_copy.txt  util.py
redline/: calendar.txt  calendar_dates.txt  fare_leg_rules.txt  fare_products.txt  fare_transfer_rules.txt  pathways.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
src/: config.yaml  util.py
src/accessibility/: aggregate.py  case studies.ipynb  diff.py  job_accessibility.py  job_data.py  median_accessibility.csv  median_accessibility_after.csv  quantile.py  temp  temp.ipynb  transit_riders.ipynb  util.py
src/data visualisation/: download_lodes_data.py  job centers.ipynb
src/data visualization/: case studies.ipynb  job_accessibility.ipynb  util.py
src/descriptive data analysis/: util.py
src/prepare_GTFS/: add_red_line.py  config.yaml  download_GTFS.py  real_time_bus_data_imputation.py  util.py
src/preprocessing/: preprocessing.py
src/proprocessing/: preprocessing.py
src/travel_time_computation/: prepare_data.py  travel_time_Baltimore.py  travel_time_computation.py
src/vulnerability/: vulnerability analysis.ipynb
stop_times_updated/: updated_stop_times_2023-01-19.txt  updated_stop_times_2023-01-20.txt  updated_stop_times_2023-01-26.txt  updated_stop_times_2023-01-27.txt  updated_stop_times_2023-02-08.txt  updated_stop_times_2023-02-09.txt  updated_stop_times_2023-02-14.txt  updated_stop_times_2023-02-15.txt  updated_stop_times_2023-02-28.txt  updated_stop_times_2023-03-06.txt  updated_stop_times_2023-03-17.txt  updated_stop_times_2023-03-28.txt  updated_stop_times_2023-04-07.txt  updated_stop_times_2023-04-20.txt  updated_stop_times_2023-04-26.txt
transitland_copy/: directions.txt  routes.txt
zipfiles_test/: calendar.txt  calendar_attributes.txt  directions.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
(+5 files in other folders)
